Add Docker support and redesign product detail page
- Add Docker Compose configuration for local development
- Redesign single product page with modern bakery theme
- Implement custom star rating system with Font Awesome icons
- Add product features, stock badges, and custom tabs
- Update documentation with Docker quick start guide

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # WordPress config file (contains sensitive data)
 wp-config.php
 
+# Docker files
+.env
+docker-compose.override.yml
+
 # Debug log
 debug.log
 
@@ -24,3 +28,6 @@ Thumbs.db
 *.swp
 *.swo
 .claude/
+
+# Documentation
+docs/
